Fix horiz spacing on CTA buttons

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -47,6 +47,7 @@ $section-padding: 1rem 0.5rem;
   .button, span {
     display: inline-block;
     text-align: center;
+    margin: 0 1rem;
   }
 }
 
